Correct snap-scroll container's overflow-x mode

--- a/src/spa/css/snap-scroll.module.css
+++ b/src/spa/css/snap-scroll.module.css
@@ -1,5 +1,6 @@
 .container {
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     scroll-snap-type: y mandatory;
 
 }
